more OS issues